<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drunk Pilot</string>
    <string name="btn_leaderboard">LEADERBOARD</string>
    <string name="btn_start">PLAY</string>
    <string name="btn_start2">PLAY AGAIN</string>
    <string name="btn_exit">QUIT</string>
    <string name="btn_home">HOME</string>
    <string name="config_title">OPTIONS</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_sign_out">Sign out</string>
    <string name="score">Score:</string>
    <string name="time">Time:</string>
    <string name="game_over">GAME OVER</string>
    <string name="high_score">Your High Score:</string>

    <!-- Google Play Game Services App ID -->
    <string name="app_id">845725980685</string>
    <!-- Google Play Game Services Leaderboard ID -->
    <string name="leaderboard_id">CgkIjbDJyc4YEAIQBQ</string>
    <!-- AdMob Smart Banner ID -->
    <string name="adMob_smart">ca-app-pub-3310939034790481/3513231854</string>
    <!-- AdMob Interstitial ID -->
    <string name="adMob_interstitial">ca-app-pub-3310939034790481/3206249053</string>

</resources>